# serializer version: 1
# name: TestNotifyArchiveUsersManagementCommand.test_archive_inactive_jobseekers_after_grace_period[jobseeker_not_is_active][archived_jobseeker]
  list([
    dict({
      'birth_year': 1964,
      'count_IAE_applications': 0,
      'count_accepted_applications': 0,
      'count_total_applications': 0,
      'date_joined': datetime.date(2023, 10, 1),
      'department': '',
      'first_login': None,
      'had_nir': True,
      'had_pole_emploi_id': False,
      'identity_provider': 'DJANGO',
      'lack_of_nir_reason': '',
      'last_login': None,
      'nir_sex': 7,
      'nir_year': 41,
      'title': 'M',
      'user_signup_kind': None,
    }),
  ])
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_archive_inactive_jobseekers_after_grace_period[jobseeker_with_all_datas_created_by_employer][archived_jobseeker]
  list([
    dict({
      'birth_year': 1990,
      'count_IAE_applications': 0,
      'count_accepted_applications': 1,
      'count_total_applications': 2,
      'date_joined': datetime.date(2021, 12, 1),
      'department': '',
      'first_login': datetime.date(2021, 12, 1),
      'had_nir': True,
      'had_pole_emploi_id': True,
      'identity_provider': 'DJANGO',
      'lack_of_nir_reason': '',
      'last_login': datetime.date(2021, 12, 1),
      'nir_sex': 6,
      'nir_year': 55,
      'title': 'MME',
      'user_signup_kind': 'employer',
    }),
  ])
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_archive_inactive_jobseekers_after_grace_period[jobseeker_with_all_datas_created_by_employer][archived_jobseeker_email_body]
  '''
  Bonjour Johan ANDERSON,
  Le XX/XX/XXXX, nous vous avons informé que votre compte sur les Emplois de l’inclusion serait supprimé.
  A ce jour, nous n’avons détecté aucune connexion, par conséquent nous avons supprimé l’intégralité des données associées à votre compte.
  En cas de besoin, vous pouvez toujours vous réinscrire sur https://emplois.inclusion.beta.gouv.fr/
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_archive_inactive_jobseekers_after_grace_period[jobseeker_with_all_datas_created_by_employer][archived_jobseeker_email_subject]
  '[DEV] Suppression de votre compte sur les Emplois de l’inclusion'
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_archive_inactive_jobseekers_after_grace_period[jobseeker_with_all_datas_created_by_prescriber][archived_jobseeker]
  list([
    dict({
      'birth_year': 1985,
      'count_IAE_applications': 2,
      'count_accepted_applications': 1,
      'count_total_applications': 2,
      'date_joined': datetime.date(2020, 4, 1),
      'department': '',
      'first_login': datetime.date(2020, 4, 1),
      'had_nir': True,
      'had_pole_emploi_id': True,
      'identity_provider': 'DJANGO',
      'lack_of_nir_reason': '',
      'last_login': datetime.date(2020, 4, 1),
      'nir_sex': 8,
      'nir_year': 55,
      'title': 'MME',
      'user_signup_kind': 'prescriber',
    }),
  ])
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_archive_inactive_jobseekers_after_grace_period[jobseeker_with_all_datas_created_by_prescriber][archived_jobseeker_email_body]
  '''
  Bonjour Johanna ANDREWS,
  Le XX/XX/XXXX, nous vous avons informé que votre compte sur les Emplois de l’inclusion serait supprimé.
  A ce jour, nous n’avons détecté aucune connexion, par conséquent nous avons supprimé l’intégralité des données associées à votre compte.
  En cas de besoin, vous pouvez toujours vous réinscrire sur https://emplois.inclusion.beta.gouv.fr/
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_archive_inactive_jobseekers_after_grace_period[jobseeker_with_all_datas_created_by_prescriber][archived_jobseeker_email_subject]
  '[DEV] Suppression de votre compte sur les Emplois de l’inclusion'
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_archive_inactive_jobseekers_after_grace_period[jobseeker_with_very_few_datas][archived_jobseeker]
  list([
    dict({
      'birth_year': None,
      'count_IAE_applications': 0,
      'count_accepted_applications': 0,
      'count_total_applications': 0,
      'date_joined': datetime.date(2022, 11, 1),
      'department': '',
      'first_login': None,
      'had_nir': False,
      'had_pole_emploi_id': False,
      'identity_provider': 'DJANGO',
      'lack_of_nir_reason': 'reason',
      'last_login': None,
      'nir_sex': None,
      'nir_year': None,
      'title': 'M',
      'user_signup_kind': None,
    }),
  ])
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_archive_inactive_jobseekers_after_grace_period[jobseeker_with_very_few_datas][archived_jobseeker_email_body]
  '''
  Bonjour Martin JACOBSON,
  Le XX/XX/XXXX, nous vous avons informé que votre compte sur les Emplois de l’inclusion serait supprimé.
  A ce jour, nous n’avons détecté aucune connexion, par conséquent nous avons supprimé l’intégralité des données associées à votre compte.
  En cas de besoin, vous pouvez toujours vous réinscrire sur https://emplois.inclusion.beta.gouv.fr/
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_archive_inactive_jobseekers_after_grace_period[jobseeker_with_very_few_datas][archived_jobseeker_email_subject]
  '[DEV] Suppression de votre compte sur les Emplois de l’inclusion'
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_archive_not_eligible_jobapplications_of_inactive_jobseekers_after_grace_period[application_sent_by_authorized_prescriber][archived_application]
  list([
    dict({
      'applied_at': datetime.date(2025, 2, 1),
      'company_department': '14',
      'company_has_convention': True,
      'company_kind': 'EITI',
      'company_naf': '8888Y',
      'had_resume': True,
      'has_been_transferred': False,
      'has_diagoriente_invitation': False,
      'hiring_contract_nature': None,
      'hiring_contract_type': None,
      'hiring_rome': None,
      'hiring_start_date': datetime.date(2025, 2, 1),
      'hiring_without_approval': False,
      'job_seeker_birth_year': 1978,
      'job_seeker_department_same_as_company_department': False,
      'last_transition_at': datetime.date(2025, 2, 1),
      'number_of_jobs_applied_for': 0,
      'origin': 'default',
      'processed_at': None,
      'refusal_reason': '',
      'sender_company_kind': None,
      'sender_kind': 'prescriber',
      'sender_prescriber_organization_authorization_status': 'VALIDATED',
      'sender_prescriber_organization_kind': 'FT',
      'state': 'prior_to_hire',
    }),
  ])
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_archive_not_eligible_jobapplications_of_inactive_jobseekers_after_grace_period[application_sent_by_company][archived_application]
  list([
    dict({
      'applied_at': datetime.date(2025, 2, 1),
      'company_department': '76',
      'company_has_convention': False,
      'company_kind': 'EI',
      'company_naf': '4567A',
      'had_resume': True,
      'has_been_transferred': False,
      'has_diagoriente_invitation': False,
      'hiring_contract_nature': None,
      'hiring_contract_type': None,
      'hiring_rome': None,
      'hiring_start_date': datetime.date(2025, 2, 1),
      'hiring_without_approval': False,
      'job_seeker_birth_year': 1978,
      'job_seeker_department_same_as_company_department': True,
      'last_transition_at': datetime.date(2025, 2, 1),
      'number_of_jobs_applied_for': 0,
      'origin': 'default',
      'processed_at': None,
      'refusal_reason': '',
      'sender_company_kind': None,
      'sender_kind': 'employer',
      'sender_prescriber_organization_authorization_status': None,
      'sender_prescriber_organization_kind': None,
      'state': 'processing',
    }),
  ])
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_archive_not_eligible_jobapplications_of_inactive_jobseekers_after_grace_period[hired_jobseeker_with_3_jobs][archived_application]
  list([
    dict({
      'applied_at': datetime.date(2025, 2, 1),
      'company_department': '76',
      'company_has_convention': True,
      'company_kind': 'GEIQ',
      'company_naf': '1234Z',
      'had_resume': True,
      'has_been_transferred': False,
      'has_diagoriente_invitation': False,
      'hiring_contract_nature': 'PEC_OFFER',
      'hiring_contract_type': 'FIXED_TERM_TREMPLIN',
      'hiring_rome': "Conduite d'engins de déplacement des charges (N1101)",
      'hiring_start_date': datetime.date(2025, 2, 1),
      'hiring_without_approval': True,
      'job_seeker_birth_year': 1978,
      'job_seeker_department_same_as_company_department': True,
      'last_transition_at': datetime.date(2025, 3, 1),
      'number_of_jobs_applied_for': 3,
      'origin': 'default',
      'processed_at': datetime.date(2025, 2, 1),
      'refusal_reason': '',
      'sender_company_kind': None,
      'sender_kind': 'job_seeker',
      'sender_prescriber_organization_authorization_status': None,
      'sender_prescriber_organization_kind': None,
      'state': 'accepted',
    }),
  ])
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_archive_not_eligible_jobapplications_of_inactive_jobseekers_after_grace_period[refused_application_with_1_jobs][archived_application]
  list([
    dict({
      'applied_at': datetime.date(2025, 2, 1),
      'company_department': '76',
      'company_has_convention': True,
      'company_kind': 'OPCS',
      'company_naf': '4567A',
      'had_resume': True,
      'has_been_transferred': False,
      'has_diagoriente_invitation': False,
      'hiring_contract_nature': None,
      'hiring_contract_type': None,
      'hiring_rome': None,
      'hiring_start_date': datetime.date(2025, 2, 1),
      'hiring_without_approval': False,
      'job_seeker_birth_year': 1978,
      'job_seeker_department_same_as_company_department': True,
      'last_transition_at': datetime.date(2025, 2, 1),
      'number_of_jobs_applied_for': 1,
      'origin': 'default',
      'processed_at': datetime.date(2025, 2, 1),
      'refusal_reason': 'reason',
      'sender_company_kind': None,
      'sender_kind': 'job_seeker',
      'sender_prescriber_organization_authorization_status': None,
      'sender_prescriber_organization_kind': None,
      'state': 'refused',
    }),
  ])
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_archive_not_eligible_jobapplications_of_inactive_jobseekers_after_grace_period[transferred_application_with_diagoriente_invitation][archived_application]
  list([
    dict({
      'applied_at': datetime.date(2025, 2, 1),
      'company_department': '76',
      'company_has_convention': True,
      'company_kind': 'EI',
      'company_naf': '4567A',
      'had_resume': True,
      'has_been_transferred': True,
      'has_diagoriente_invitation': True,
      'hiring_contract_nature': None,
      'hiring_contract_type': None,
      'hiring_rome': None,
      'hiring_start_date': datetime.date(2025, 2, 1),
      'hiring_without_approval': False,
      'job_seeker_birth_year': 1978,
      'job_seeker_department_same_as_company_department': True,
      'last_transition_at': datetime.date(2025, 2, 1),
      'number_of_jobs_applied_for': 0,
      'origin': 'default',
      'processed_at': None,
      'refusal_reason': '',
      'sender_company_kind': None,
      'sender_kind': 'employer',
      'sender_prescriber_organization_authorization_status': None,
      'sender_prescriber_organization_kind': None,
      'state': 'postponed',
    }),
  ])
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_notify_inactive_jobseekers[jobseeker_in_followup_group_without_recent_activity][inactive_jobseeker_email_body]
  '''
  Bonjour Jane DOE,
  Nous n’avons détecté aucune activité sur votre compte sur les Emplois de l’inclusion depuis le XX/XX/XXXX.
  Sans connexion de votre part avant le YY/YY/YYYY, votre compte sera supprimé ainsi que toutes les données associées.
  Si vous souhaitez conserver votre espace personnel, nous vous invitons à vous reconnecter sur https://emplois.inclusion.beta.gouv.fr/ .
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_notify_inactive_jobseekers[jobseeker_in_followup_group_without_recent_activity][inactive_jobseeker_email_subject]
  '[DEV] Information avant suppression de votre compte sur les Emplois de l’inclusion'
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_notify_inactive_jobseekers[jobseeker_with_job_application_without_recent_activity][inactive_jobseeker_email_body]
  '''
  Bonjour Jane DOE,
  Nous n’avons détecté aucune activité sur votre compte sur les Emplois de l’inclusion depuis le XX/XX/XXXX.
  Sans connexion de votre part avant le YY/YY/YYYY, votre compte sera supprimé ainsi que toutes les données associées.
  Si vous souhaitez conserver votre espace personnel, nous vous invitons à vous reconnecter sur https://emplois.inclusion.beta.gouv.fr/ .
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_notify_inactive_jobseekers[jobseeker_with_job_application_without_recent_activity][inactive_jobseeker_email_subject]
  '[DEV] Information avant suppression de votre compte sur les Emplois de l’inclusion'
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_notify_inactive_jobseekers[jobseeker_without_recent_activity][inactive_jobseeker_email_body]
  '''
  Bonjour Jane DOE,
  Nous n’avons détecté aucune activité sur votre compte sur les Emplois de l’inclusion depuis le XX/XX/XXXX.
  Sans connexion de votre part avant le YY/YY/YYYY, votre compte sera supprimé ainsi que toutes les données associées.
  Si vous souhaitez conserver votre espace personnel, nous vous invitons à vous reconnecter sur https://emplois.inclusion.beta.gouv.fr/ .
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_notify_inactive_jobseekers[jobseeker_without_recent_activity][inactive_jobseeker_email_subject]
  '[DEV] Information avant suppression de votre compte sur les Emplois de l’inclusion'
# ---
